--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -1,107 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Extended links to stylesheet -->
+    <link rel="stylesheet" type="text/css" href="./styles/4-common.css">
+    <link rel="stylesheet" type="text/css" href="./styles/8-places.css">
+    <link rel="stylesheet" type="text/css" href="./styles/3-header.css">
+    <link rel="stylesheet" type="text/css" href="./styles/3-footer.css">
+    <link rel="stylesheet" type="text/css" href="./styles/6-filters.css">
+
+    <!-- Shortcut icon -->
+    <link rel="shortcut icon" type="image/png" href="./images/icon.png">
     <title>AirBnB clone</title>
-		<link rel="stylesheet" href="./styles/4-common.css">
-		<link rel="stylesheet" href="./styles/3-footer.css">
-		<link rel="stylesheet" href="./styles/3-header.css">
-    <link rel="stylesheet" href="./styles/6-filters.css">
-    <link rel="stylesheet" href="./styles/8-places.css">
-    <link rel="icon" href="images/icon.png">
-	</head>
-	<body>
-		<header></header>
-    <div class="page-container">
-      <div class="container">
+</head>
+
+<body>
+    <header>
+        <a href="" class="logo"></a>
+    </header>
+    <div class="container">
         <section class="filters">
-          <div class="locations">
-            <h3>States</h3>
-            <h4>California, Arizona...</h4>
-            <div class="popover">
-              <ul>
-                <li><h2>Arizona</h2>
-                  <ul>
-                    <li>Phoenix</li>
-                    <li>Tuscon</li>
-                  </ul>
-                </li>
-                <li><h2>California</h2>
-                  <ul>
-                    <li>San Fransisco</li>
-                    <li>Los Altos</li>
-                  </ul>
-                </li>
-              </ul>
+            <div class="locations">
+                <h3>States</h3>
+                <h4>California, Arizona</h4>
+                <div class="popover">
+                    <h2>Arizona:</h2>
+                    <ul>
+                        <li>Page</li>
+                        <li>Page2</li>
+                    </ul>
+                    <h2>California:</h2>
+                    <ul>
+                        <li>San Francisco</li>
+                        <li>Los Altos</li>
+                    </ul>
+                </div>
             </div>
-          </div>
-          <div class="amenities">
-            <h3>Amenities</h3>
-            <h4>Internet, Kitchen...</h4>
-            <div class="popover">
-              <ul>
-                <li>Internet</li>
-                <li>TV</li>
-                <li>Kitchen</li>
-                <li>Games</li>
-              </ul>
+            <div class="amenities">
+                <h3>Amenities</h3>
+                <h4>Internet, kitchen</h4>
+                <div class="popover">
+                    <ul>
+                        <li>Internet</li>
+                        <li>TV</li>
+                        <li>Kitchen</li>
+                        <li>Iron</li>
+                    </ul>
+                </div>
             </div>
-          </div>
-          <button>Search</button>
+            <button type="button">Search</button>
         </section>
         <section class="places">
-          <h1>Places</h1>
-          <article>
-            <h2>My home</h2>
-            <div class="price_by_night"><p>$299</p></div>
-            <div class="information">
-              <div class="max_guest"><span>6 Guests</span></div>
-              <div class="number_rooms"><span>3 Bedrooms</span></div>
-              <div class="number_bathrooms"><span>2 Bathrooms</span></div>
-            </div>
-            <div class="user">
-              <b>Owner</b>: Jenny Astin
-            </div>
-            <div class="description">
-              This is a lovely 3 bedroom 2 bathroom home that can accomodate 6 people. It locates at the center of Downtown Las Altos and next to subway line 1, 1 stop to downtown, 2 stops to the party zone, 3 stops to the crazy ally.
-            </div>
-          </article>
-          <article>
-            <h2>Tiny house</h2>
-            <div class="price_by_night"><p>$179</p></div>
-            <div class="information">
-              <div class="max_guest"><span>2 Guests</span></div>
-              <div class="number_rooms"><span>1 Bedroom</span></div>
-              <div class="number_bathrooms"><span>1 Bathroom</span></div>
-            </div>
-            <div class="user">
-              <b>Owner</b>: Tomme Brady
-            </div>
-            <div class="description">
-              This is a lovely 1 bedroom 1 bathroom aparment that can accomodate 2 people. It locates at the center of Downtown San Francisco and next to Muni lines N & J to accomodate traveling around the city with ease.
-            </div>
-          </article>
-          <article>
-            <h2>A suite</h2>
-            <div class="price_by_night"><p>$149</p></div>
-            <div class="information">
-              <div class="max_guest"><span>2 Guests</span></div>
-              <div class="number_rooms"><span>1 Bedroom</span></div>
-              <div class="number_bathrooms"><span>1 Bathroom</span></div>
-            </div>
-            <div class="user">
-              <b>Owner</b>: Renne Abstract
-            </div>
-            <div class="description">
-              This is a lovely 1 bedroom 1 bathroom suite that can accomodate 2 people. It locates at the center of Downtown San Francisco and next to Muni lines L & K to accomodate traveling around the city with ease.
-            </div>
-          </article>
+            <h1>Places</h1>
+            <article>
+                <h2>My home</h2>
+                <div class="price_by_night">
+                    <p>$80</p>
+                </div>
+                <div class="information">
+                    <div class="max_guest">
+                        <p>2 guests</p>
+                    </div>
+                    <div class="number_rooms">
+                        <p>1 bedroom</p>
+                    </div>
+                    <div class="number_bathrooms">
+                        <p>1 bathroom</p>
+                    </div>
+                </div>
+                <div class="user">
+                    <b>Owner:</b> John Lennon
+                </div>
+                <div class="description">
+                    <p>This is a unique (2 room) apartment located in the heart of the Old Town, 2 mins from the Market Square. Its original interior design, mixing antique and modern elements in large space, will help you to experience Krakow's unforgettable
+                        charm
+                    </p>
+                </div>
+            </article>
+            <article>
+                <h2>Tiny house</h2>
+                <div class="price_by_night">
+                    <p>$65</p>
+                </div>
+                <div class="information">
+                    <div class="max_guest">
+                        <p>4 guests</p>
+                    </div>
+                    <div class="number_rooms">
+                        <p>3 bedroom</p>
+                    </div>
+                    <div class="number_bathrooms">
+                        <p>2 bathroom</p>
+                    </div>
+                </div>
+                <div class="user">
+                    <b>Owner:</b> Paula
+                </div>
+                <div class="description">
+                    <p>This house is an old Japanese traditional house built in 1948. We renovated inside so it is very clean and comfortable. I am an artist There is a kitchen and living area at the1st floor and you can see the little Japanese garden from
+                        it. The 2nd floor is an also traditional tatami room and sleep with Japanese style of bed (FUTON) so you will have real Japanese life style at our place.
+                    </p>
+                </div>
+
+            </article>
+            <article>
+                <h2>A suite</h2>
+                <div class="price_by_night">
+                    <p>$190</p>
+                </div>
+                <div class="information">
+                    <div class="max_guest">
+                        <p>8 guests</p>
+                    </div>
+                    <div class="number_rooms">
+                        <p>4 bedroom</p>
+                    </div>
+                    <div class="number_bathrooms">
+                        <p>5 bathroom</p>
+                    </div>
+                </div>
+                <div class="user">
+                    <b>Owner:</b> Alex
+                </div>
+                <div class="description">
+                    <p>Serene courtyards, lily pools, and a rooftop terrace with a circular dining sala set a reflective tone at this traditional Thai villa near Dream Beach Club. Glass walls, marble floors, and rain showers strike a contemporary theme inside.
+                        Cue the sound system, hit the gym, and swim in the infinity pool with epic ocean views, or check out the resort's library and spa. Ton Sai Waterfall is a 6-mile drive.</p>
+                </div>
+            </article>
         </section>
-      </div>
-      <footer>
-        <p>Best School</p>
-      </footer>
     </div>
-	</body>
+    <footer>
+        <p>Holberton School</p>
+    </footer>
+</body>
+
 </html>
