--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AirBnB clone</title>
-</head>
-
-<body style="margin:0; padding: 0">
-    <header style="background-color: #FF0000; height: 70px; width: 100%"></header>
-
-    <footer style="background-color: #00FF00; height: 60px; width: 100%; position: absolute; left: 0;bottom: 0">
-        <p style="text-align: center; padding: 6px;">Holberton School</p>
+  <head>
+    <head>
+    <meta charset="utf-8">
+    <title>AirBnB Clone</title>
+  </head>
+  
+  <body style="margin: 0; padding: 0;">
+    <header style="background-color: #f00; height: 70px; width: 100%;">
+    </header>
+    <footer style="align-items: center;
+                   background-color: #0f0;
+                   bottom: 0;
+                   display: flex;
+                   height: 60px;
+                   justify-content: center;
+                   position: absolute;
+                   width: 100%;">
+      Best School
     </footer>
-</body>
-
+  </body>
 </html>
