--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,25 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./styles/3-common.css">
-    <link rel="stylesheet" type="text/css" href="./styles/3-header.css">
-    <link rel="stylesheet" type="text/css" href="./styles/3-footer.css">
-    <link rel="shortcut icon" type="image/png" href="./images/icon.png">
+  <head>
+    <meta charset="utf-8">
     <title>AirBnB clone</title>
-</head>
+    <link rel="stylesheet" href="styles/3-common.css">
+    <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
+    <link rel="icon" href="images/icon.png">
+  </head>
 
-<body>
-    <header>
-        <a href="" class="logo"></a>
-    </header>
-
+  <body>
+    <header></header>
     <footer>
-        <p>Holberton school</p>
+      Best School
     </footer>
-
-</body>
-
+  </body>
 </html>
