--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -1,46 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- Extended links to stylesheet -->
-    <link rel="stylesheet" type="text/css" href="./styles/4-common.css">
-    <link rel="stylesheet" type="text/css" href="./styles/3-header.css">
-    <link rel="stylesheet" type="text/css" href="./styles/3-footer.css">
-    <link rel="stylesheet" type="text/css" href="./styles/5-filters.css">
-
-    <!-- Shortcut icon -->
-    <link rel="shortcut icon" type="image/png" href="./images/icon.png">
+  <head>
+    <meta charset="utf-8">
     <title>AirBnB clone</title>
-</head>
+    <link rel="stylesheet" href="styles/4-common.css">
+    <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
+    <link rel="stylesheet" href="styles/5-filters.css">
+    <link rel="icon" href="images/icon.png">
+  </head>
 
-<body>
-    <header>
-        <a href="" class="logo"></a>
-    </header>
-
+  <body>
+    <header></header>
     <div class="container">
-        <section class="filters">
-            <div class="locations">
-                <h3>States</h3>
-                <h4>Califonia, Arizona...</h4>
-            </div>
-            <div class="amenities">
-                <h3>Amenities</h3>
-                <h4>Internet, Kitchen</h4>
-            </div>
-
-            <button>Search</button>
-        </section>
+      <section class="filters">
+        <div class="locations">
+          <h3>States</h3>
+          <h4>ie. New York/Virgina...</h4>
+        </div><div class="amenities">
+          <h3>Amenities</h3>
+          <h4>ie. Laundry/Internet...</h4>
+        </div>
+        <button>Search</button>
+      </section>
     </div>
-
     <footer>
-        <p>Holberton school</p>
+      Best School
     </footer>
-
-
-</body>
-
+  </body>
 </html>
