--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -1,77 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- Extended links to stylesheet -->
-    <link rel="stylesheet" type="text/css" href="./styles/4-common.css">
-    <link rel="stylesheet" type="text/css" href="./styles/7-places.css">
-    <link rel="stylesheet" type="text/css" href="./styles/3-header.css">
-    <link rel="stylesheet" type="text/css" href="./styles/3-footer.css">
-    <link rel="stylesheet" type="text/css" href="./styles/6-filters.css">
-
-    <!-- Shortcut icon -->
-    <link rel="shortcut icon" type="image/png" href="./images/icon.png">
+  <head>
+    <meta charset="utf-8">
     <title>AirBnB clone</title>
-</head>
+    <link rel="stylesheet" href="styles/4-common.css">
+    <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
+    <link rel="stylesheet" href="styles/6-filters.css">
+    <link rel="stylesheet" href="styles/7-places.css">
+    <link rel="icon" href="images/icon.png">
+  </head>
 
-<body>
-    <header>
-        <a href="" class="logo"></a>
-    </header>
+  <body>
+    <header></header>
 
     <div class="container">
-        <section class="filters">
-            <div class="locations">
-                <h3>States</h3>
-                <h4>California, Arizona</h4>
-                <div class="popover">
-                    <h2>Arizona:</h2>
-                    <ul>
-                        <li>Page</li>
-                        <li>Page2</li>
-                    </ul>
-                    <h2>California:</h2>
-                    <ul>
-                        <li>San Francisco</li>
-                        <li>Los Altos</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="amenities">
-                <h3>Amenities</h3>
-                <h4>Internet, kitchen</h4>
-                <div class="popover">
-                    <ul>
-                        <li>Internet</li>
-                        <li>TV</li>
-                        <li>Kitchen</li>
-                        <li>Iron</li>
-                    </ul>
-                </div>
-            </div>
-            <button type="button">Search</button>
-        </section>
-        <section class="places">
-            <h1>Places</h1>
-            <article>
-                <h2>My home</h2>
-            </article>
-            <article>
-                <h2>Tiny house</h2>
-            </article>
-            <article>
-                <h2>A suite</h2>
-            </article>
-        </section>
+      <section class="filters">
+        <div class="locations">
+          <h3>States</h3>
+          <h4>New York/Virgina...</h4>
+          <div class="popover">
+            <h2>New York:</h2>
+            <ul>
+              <li>Buffalo</li>
+              <li>New York City</li>
+            </ul>
+            <h2>Virginia:</h2>
+            <ul>
+              <li>Charlottesville</li>
+              <li>Richmond</li>
+            </ul>
+          </div>
+
+        </div><div class="amenities">
+          <h3>Amenities</h3>
+          <h4>Laundry/Internet...</h4>
+          <ul class="popover">
+            <li>Internet</li>
+            <li>TV</li>
+            <li>Kitchen</li>
+            <li>Iron</li>
+          </ul>
+        </div>
+        <button>Search</button>
+      </section>
+
+      <section class="places">
+        <h1>Places</h1>
+        <article>
+          <h2>MY home</h2>
+        </article><article>
+          <h2>Tiny house</h2>
+        </article><article>
+          <h2>A suite</h2>
+        </article>
+      </section>
     </div>
 
     <footer>
-        <p>Holberton school</p>
+      Best School
     </footer>
-
-</body>
-
+  </body>
 </html>
